--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -702,11 +702,16 @@ a {
   text-align: left;
 }
 /* project-main */
-.project-main {
+.project {
   background-color: #143c3c;
+  padding-top: 116px;
+  padding-bottom: 63px;
 }
 .project-main .project-info {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 65px;
 }
 .project-main .project-info > h2 {
   width: 457px;
@@ -720,6 +725,371 @@ a {
 }
 .title-project.title-light::after {
   background-color: #83a17d;
-  top: 0 px;
-  right: -22px;
+  right: 88 px;
+}
+.project-main .project-info .project-decs > p {
+  width: 590px;
+  height: 59px;
+  margin-bottom: 13px;
+  color: #6a8383;
+  font-family: var(--font-public);
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.form-project > a {
+  margin-right: 26px;
+  color: #ffffff;
+  font-family: var(--font-public);
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.form-project > svg {
+  cursor: pointer;
+}
+.project-video {
+  margin: 0 auto;
+}
+.project-video .project-img > img {
+  width: 1140px;
+  height: 544px;
+}
+.project-video {
+  position: relative;
+}
+.img-ab {
+  position: absolute;
+  z-index: 1;
+  top: -146px;
+  right: 310px;
+}
+.flower-3 {
+  position: absolute;
+  top: 80px;
+  right: -368px;
+}
+.wire3 {
+  position: absolute;
+  z-index: -1;
+  top: -6px;
+  left: 43px;
+}
+/* features */
+.features {
+  margin-top: 140px;
+  margin-bottom: 184px;
+}
+.features-main .title-features > h2 {
+  width: 520px;
+  height: 104px;
+  margin: 0px auto 20px auto;
+  color: #152427;
+  font-size: 4.2rem;
+  font-weight: 600;
+  line-height: 52px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.features-main > p {
+  width: 547px;
+  height: 78px;
+  margin: 0px auto 103px auto;
+  color: #7d8188;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.features-list {
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  column-gap: 45px;
+}
+.features-list > .features-item {
+  cursor: pointer;
+  text-align: center;
+  border: 1.5px solid #cecece;
+  border-radius: 160px;
+  padding: 74px 37px 74px 27px;
+  transition: 0.25s;
+}
+.features-list .features-item:hover {
+  transform: translateY(-15%);
+  background: #fff;
+  box-shadow: 0px 36px 100px 0px #6f786f33;
+}
+.features-item .features-item-img {
+  margin-bottom: 26px;
+}
+.features-item-title {
+  display: inline-block;
+  margin-bottom: 9px;
+  color: #152427;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.features-item-decs {
+  width: 286px;
+  height: 118px;
+  color: #7d8188;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+/* BLOG & ARTICLES */
+.articles {
+  margin-bottom: 102px;
+}
+.intro-articles {
+  margin-bottom: 10px;
+  color: #152427;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.articles-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.desc-articles {
+  width: 409px;
+  height: 52px;
+  color: #7d8188;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.title-articles {
+  width: 520px;
+  height: 96px;
+  color: #152427;
+  font-size: 4.2rem;
+  font-weight: 600;
+  line-height: 52px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.title-articles.title-light::after {
+  right: -33px;
+}
+.articles-list {
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  column-gap: 30px;
+  margin-top: 90px;
+}
+
+.articles-list .articles-item img {
+  width: 360px;
+  height: 276px;
+  border-radius: 40px 40px 0px 0px;
+  object-fit: cover;
+}
+.articles-list .articles-item {
+  transition: 0.35s;
+  border-radius: 40px 40px 20px 20px;
+}
+.articles-list .articles-item:hover {
+  box-shadow: 0px 12px 74px 0px #5b5b5b40;
+  transform: translateY(-10%);
+}
+.articles-info > a:hover {
+  background-color: #143c3c;
+  color: #fff;
+}
+.articles-info {
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0px 0px 20px 20px;
+  background-color: #fff;
+  padding: 26px 33px 12px 33px;
+}
+.articles-info > a {
+  display: inline-block;
+  margin-bottom: 13px;
+  padding: 7px 33px;
+  border-radius: 20px;
+  background-color: #e2eddf;
+  color: #000000;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 12px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.articles-info > h3 {
+  height: 90px;
+
+  color: #143c3c;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.articles-item {
+  position: relative;
+}
+.articles-item .articles-info .year-time {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 15px;
+}
+.articles-item .articles-info .year-time span {
+  color: #575d5e;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 12px;
+  letter-spacing: 0em;
+  text-align: right;
+}
+
+.articles-info > div {
+  width: 297px;
+  height: 1px;
+  background-color: #c4c4c4;
+}
+/* footer */
+.footer {
+  padding-top: 72px;
+  padding-bottom: 70px;
+  background-color: #143c3c;
+}
+.footer-main {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.footer-main::after {
+  position: absolute;
+  bottom: -45px;
+  display: inline-block;
+  content: "";
+  width: 1140px;
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    #143c3c 2.28%,
+    #295a5a 55.65%,
+    rgba(38, 82, 82, 0) 102.06%
+  );
+}
+.footer-main .footer-left > h2 {
+  margin-bottom: 25px;
+  color: #ffffff;
+  font-size: 3.2rem;
+  font-weight: 500;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.footer-main .footer-left div {
+  width: 354px;
+  height: 1px;
+  margin-bottom: 37px;
+  background-color: #6a8383;
+}
+.form-input {
+  display: flex;
+  width: 354px;
+  margin-bottom: 35px;
+}
+.form-input input {
+  margin-right: 130px;
+  border: none;
+  width: 183px;
+  background-color: transparent;
+}
+.form-input input:focus-visible {
+  border: transparent;
+  outline: none;
+}
+.form-input input::placeholder {
+  text-align: center;
+  color: #6a8383;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.form-input button {
+  background-color: transparent;
+  border: none;
+}
+.form-input button svg {
+  color: #6a8383;
+}
+.footer-media-block {
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+}
+.footer-media-block svg {
+  cursor: pointer;
+  border: 1px #265252 solid;
+  border-radius: 50%;
+  color: #143c3c;
+}
+.footer-media-block svg:hover {
+  border: none;
+  color: #a75325;
+}
+.footer-list {
+  display: grid;
+  grid-template-columns: repeat(4, 75px);
+  column-gap: 50px;
+}
+.footer-list .footer-item > p {
+  margin-bottom: 6px;
+  color: #ffffff;
+  font-family: var(--font-public);
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.footer-list .footer-item ul li:first-child,
+.footer-list .footer-item ul li + li {
+  margin-bottom: 3px;
+}
+.footer-list .footer-item ul li > a {
+  color: #6a8383;
+  font-family: var(--font-public);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 36px;
+  letter-spacing: 0em;
+  text-align: left;
+  transition: 0.25s;
+}
+.footer-list .footer-item ul li a:hover {
+  color: white;
+}
+.copy-right {
+  margin-top: 60px;
+}
+.copy-right > p {
+  text-align: center;
+  font-size: 1rem;
+  color: rgb(250, 250, 250, 0.5);
 }
